--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
 <head>
 <meta charset="utf-8">
 <title>my index page</title>
+<style>
+a{
+color:lightblue;
+background:green;
+text-decoration:none;
+padding:10px;
+border:5px solid purple;
+border-radius:50%;
+width:20px;
+height:50px;
+border-radius:50%;
+display:block;
+}
+
+a:hover{
+  background:pink;
+  color:black
+}
+
+a:active{
+  background:yellow;
+}
+  </style>
 </head>
 
 <body>
   <h1>Hello world!</h1>
 <p>Never mind, I don't want to say hello. Instead, I want to continue watching funny cat videos. Get out of my room!</p>
+<p><a href="something.html">test link</a></p>
 </body>
 </html>
