--- a/something.html
+++ b/something.html
@@ -10,7 +10,7 @@
   <h1>Hello! My name is Macey.</h1>
 <p>This is a test.</p>
 
-<p>test link</p>
+<p><a href="something.html">test link</a></p>
 
 </body>
 </html>
