--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
 <meta charset="utf-8">
 <title>my index page</title>
 <style>
+ul{
+list-style-type:none;
+  margin:0;
+  padding:0;
+}
+body {
+font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+
+
+
+h1{
+  font-family: 'Water Brush', cursive;
+}
+li{
+  margin-bottom:40px;
+}
 a{
-color:lightblue;
-background:green;
-text-decoration:none;
-padding:10px;
-border:5px solid purple;
-border-radius:50%;
-width:20px;
-height:50px;
-border-radius:50%;
-display:block;
+  text-decoration:none;
+  color:white;
+  background:blue;
+  padding:10px;
 }
 
-a:hover{
-  background:pink;
-  color:black
-}
-
-a:active{
-  background:yellow;
-}
-  </style>
+</style>
 </head>
-
 <body>
+  <img src="header.jpg" alt="website header with rude duck" />
   <h1>Hello world!</h1>
 <p>Never mind, I don't want to say hello. Instead, I want to continue watching funny cat videos. Get out of my room!</p>
 <p><a href="something.html">test link</a></p>
+
+<ul>
+  <li><a href="text.html">text page</a></li>
+  <li><a href="#">another page</a></li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4sNQm_PU_AU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
