--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ a{
 <ul>
   <li><a href="text.html">text page</a></li>
   <li><a href="#">another page</a></li>
+  <li><a href="background.html">background page</a></li>
+  <li><a href="quote.html">quote page</a></li>
 </ul>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/4sNQm_PU_AU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
