--- a/boxes.html
+++ b/boxes.html
@@ -15,12 +15,12 @@ html{
 }
 
 #box1 {
-  background: purple;
-  color: white;
+  background: green;
+  border: 30px solid yellow;
+  color: lightblue;
   width: 500px;
   height: 300px;
   padding: 50px;
-  border: 30px solid black;
   margin:100px;
   margin-bottom:200px;
   positon:absolute;
@@ -28,7 +28,8 @@ html{
   }
 
   #box2{
-    background:pink;
+    background:orange;
+    color:blue;
     width:400px;
     padding:50px;
     margin:100px;
@@ -40,13 +41,15 @@ html{
 </head>
 
 <body>
+
 <h1>boxes pages</h1>
+
 <div id="box1">
-<p>content in the box</p>
+<p>box</p>
 </div>
 
 <div id="box2">
-  <p>another frickin' box</p>
+  <p>box's friend</p>
   </div>
 
 </body>
