--- a/boxes.html
+++ b/boxes.html
@@ -34,7 +34,7 @@ html{
     padding:50px;
     margin:100px;
     position:relative;
-    top: -150px
+    top: -150px;
     left:0px;
   }
 </style>
