--- a/grid.html
+++ b/grid.html
@@ -28,16 +28,28 @@ html{
 
 .Header {
 grid-area: Header;
-background: pink;
+background: red;
 }
 
-.side-left { grid-area: side-left; }
+.side-left {
+grid-area: side-left;
+background: pink
+}
 
-.center { grid-area: center; }
+.center {
+grid-area: center;
+background: orange;
+}
 
-.side-right { grid-area: side-right; }
+.side-right {
+grid-area: side-right;
+background: yellow;
+}
 
-.big-left { grid-area: big-left; }
+.big-left {
+grid-area: big-left;
+background: green;
+}
 
 </style>
 </head>
@@ -45,15 +57,17 @@ background: pink;
 <body>
 <div class="container">
 
-<div class="Header"><h1>css grid</h1>
+<div class="Header"><h1>strawberry</h1>
 </div>
 
-
-<div class="side-left"></div>
-<div class="center"></div>
-<div class="side-right"></div>
-<div class="big-left"></div>
+<div class="side-left"><h2>grapefruit</h2>
+</div>
+<div class="center"><h3>orange</h3>
+</div>
+<div class="side-right"><h4>lemon</h4>
+</div>
+<div class="big-left"><h5>lime<h5>
+</div>
 </div>
 </body>
-
 </html>
