--- a/text.html
+++ b/text.html
@@ -4,20 +4,31 @@
 <head>
 <meta charset="utf-8">
 <title>my index page</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Macondo&family=Shadows+Into+Light&family=Smokum&display=swap" rel="stylesheet">
+<style>
+h1{font-family: 'Macondo', cursive;}
+p{font-family: 'Shadows Into Light', cursive;}
+h2{font-family: 'Smokum', cursive;}
+li{font-family: 'Grape Nuts', cursive;}
+</style>
 </head>
 
 <body>
-<h1>this is a big headline</h1>
-<h2>small headline is here</h2>
-<p>this is a paragraph that I am typing on this software right now. Hello! My favorite food is sushi. I love sushi!</p>
-<h2>list of sushi I like</h2>
+<h1>This is a Big Headline</h1>
+<h1>Small Headline is Here</h1>
+<p>This is a paragraph that I am typing on this software right now. Hello! My favorite food is sushi. I love sushi!</p>
+<h2>List of Sushi I Like</h2>
 <ul>
 <li>MSU roll</li>
 <li>Tempura roll</li>
 </ul>
-<h2>I also like tacos, so here's a list of those</h2>
+<h2>I Also Like Tacos, so Here's a List of Those</h2>
 <ol>
-<li>beef taco</li>
-<li>chicken taco</li>
-<li>shrimp taco</li>
+<li>Beef Taco</li>
+<li>Chicken Taco</li>
+<li>Shrimp Taco</li>
 </ol>
+</body>
+</html>
