--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 <meta charset="utf-8">
 <title>my index page</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Water+Brush&display=swap" rel="stylesheet">
 <style>
 ul{
 list-style-type:none;
