--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ a{
   <li><a href="boxes.html">boxes page</a></li>
   <li><a href="surprise.html">surprise, boi!</a></li>
   <li><a href="grid.html">grid fruit</a></li>
+  <li><a href="transitions.html">transitions</a></li>
 </ul>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/4sNQm_PU_AU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
